Style: Fix Z-index of header

--- a/src/style/App.css
+++ b/src/style/App.css
@@ -39,7 +39,7 @@ body{
     border-right: 1px solid #2F3336;
     padding: 1.5rem 1rem;
     backdrop-filter: blur(8px);
-    z-index: 0;
+    z-index: 999;
 }
 
 .top-tweets {
@@ -520,7 +520,7 @@ body{
     border-right: 1px solid #2F3336;
     padding: 20px 0px 20px 20px;
     backdrop-filter: blur(8px);
-    z-index: 0;
+    z-index: 999;
 
 }
 
